# polygon_to_mask

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/polygon_to_mask/: main.py
tests/: test_main.py
