[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "polygon-to-mask"
version = "0.0.0"
description = "This package is to reverse polygon to masks."
authors = ["Wenhan YANG"]
license = "proprietary"
readme = "README.md"

[tool.poetry.dependencies]
# waiting on pytype: https://github.com/google/pytype/issues/1308
python = "^3.10"
shapely = "^2.0.5"
rasterio = "^1.3.10"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
ruff = "^0.6.5"
pytest = "^8.3.3"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.ruff]
src = ["src", "tests"]
lint.select = [
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "C90", # mccabe
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy-specific rules
  "PD",  # pandas-vet
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "RUF", # ruff specific rules
  "S",   # flake8-bandit
  "TID", # flake8-tidy-imports
]
lint.ignore = [
  "ANN101", # missing-type-self
  "D203",   # one-blank-line-before-class
  "D211",   # no-blank-line-before-class
  "D212",   # multi-line-summary-first-line
  "D401",   # non-imperative-mood
  "S105",   # hardcoded-password-string
  "ANN002", # missing-type-args
  "ANN003", # missing-type-kwargs	
]
# must be less than or equal to the .python-version file
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E501"] # assert

[tool.pytype]
inputs = ['src', 'tests']
pythonpath = "src:"
# must match exactly the .python-version file
python_version = '3.10'

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
relative_files = true
branch = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]